test/errors/fullUsePath.compopts
--detailed-errors # fullUsePath-detailed.good
--no-detailed-errors # fullUsePath-brief.good
